<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.aionemu</groupId>
	<artifactId>aion-server</artifactId>
	<version>4.8-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>chat-server</module>
		<module>commons</module>
		<module>game-server</module>
		<module>login-server</module>
	</modules>

	<properties>
		<maven.compiler.release>25</maven.compiler.release>
		<maven.test.skip>true</maven.test.skip>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.aionemu</groupId>
				<artifactId>commons</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.14.0</version>
					<configuration>
						<compilerArgs>
							<arg>-Xlint:all,-preview,-this-escape</arg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.4.2</version>
					<configuration>
						<archive>
							<manifestEntries>
								<POMVersion>${project.version}</POMVersion>
								<Revision>${git.commit.id.abbrev}${git.dirty}</Revision>
								<Branch>${git.branch}</Branch>
								<Date>${maven.build.timestamp}</Date>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.4</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<version>9.0.2</version>
				<configuration>
					<includeOnlyProperties>
						<includeOnlyProperty>^git.branch$</includeOnlyProperty>
						<includeOnlyProperty>^git.commit.id.abbrev$</includeOnlyProperty>
						<includeOnlyProperty>^git.dirty$</includeOnlyProperty>
					</includeOnlyProperties>
					<replacementProperties>
						<replacementProperty>
							<property>git.dirty</property>
							<token>true</token>
							<value>-DIRTY</value>
						</replacementProperty>
						<replacementProperty>
							<property>git.dirty</property>
							<token>false</token>
							<value />
						</replacementProperty>
					</replacementProperties>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
				</configuration>
				<executions>
					<execution>
						<phase>initialize</phase>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
